--- a/src/main/webapp/facebook.html
+++ b/src/main/webapp/facebook.html
@@ -36,7 +36,7 @@
 	<div style="margin: 100px 0 0 50px; float: left; position: absolute">
 		<a href="#" class="button gray" id="facebook-post-status">POST
 			Status</a> <span class="parameter">Parameter: <input
-			id="parameter" style="width: 320px;" value='message="Hello, World."' /></span>
+			id="parameter" style="width: 320px;" value='"Hello, World."' /></span>
 	</div>
 	<div style="margin: 150px 0 0 50px; float: left; position: absolute">
 		<a href="#" class="button gray" id="facebook-get">Get
@@ -46,7 +46,10 @@
 	<script src="js/libs/localstorage.js"></script>
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
 	<script src="js/libs/jquery-2.1.0.js"></script>
-	<script src="jso.js"></script>
-	<script src="postStatus.js"></script>
+	<script src="js/libs/moment.min.js"></script>
+	<script src="js/libs/jso.js"></script>
+	<script src="js/commComp/config.js"></script>
+	<script src="js/commComp/oauth.js"></script>
+	<script src="js/platform/facebook.js"></script>
 </body>
 </html>
