--- a/src/main/webapp/linkedin.html
+++ b/src/main/webapp/linkedin.html
@@ -49,10 +49,10 @@
 		<script src="js/libs/json2.js"></script>
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
-		<script src="OAuthSimple.js"></script>
-		<script src="jso.js"></script>
-		<script src="config.js"></script>
-		<script src="oauth.js"></script>
-		<script src="linkedin.js"></script>
+		<script src="js/libs/OAuthSimple.js"></script>
+		<script src="js/libs/jso.js"></script>
+		<script src="js/commComp/config.js"></script>
+		<script src="js/commComp/oauth.js"></script>
+		<script src="js/platform/linkedin.js"></script>
 </body>
 </html>
