--- a/src/main/webapp/twitter2.html
+++ b/src/main/webapp/twitter2.html
@@ -14,7 +14,7 @@
 			<li><a href="facebook.html">Facebook</a></li>
 			<li><a href="google.html">Google+</a></li>
 			<li><a href="linkedin.html">LinkedIn</a></li>
-			<li class="current"><a href="twitter.html">Twitter</a></li>
+			<li class="current"><a href="twitter2.html">Twitter</a></li>
 			<li><a href="#">About</a></li>
 		</ul>
 	</div>
@@ -46,10 +46,10 @@
 		<script src="js/libs/json2.js"></script>
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
-		<script src="OAuthSimple.js"></script>
-		<script src="jso.js"></script>
-		<script src="config.js"></script>
-		<script src="oauth.js"></script>
-		<script src="twitterx.js"></script>
+		<script src="js/libs/OAuthSimple.js"></script>
+		<script src="js/libs/jso.js"></script>
+		<script src="js/commComp/config.js"></script>
+		<script src="js/commComp/oauth.js"></script>
+		<script src="js/platform/twitter.js"></script>
 </body>
 </html>
