--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<title>ePay</title>
+		<title>Universal Social Network</title>
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
+		<meta http-equiv="refresh" content="0;facebook.html">
 		<!-- Le styles -->
 		<link href="CommonComp/lib/css/bootstrap-cerulean.css" rel="stylesheet">
 		<link href="CommonComp/lib/css/bootstrap-responsive.css" rel="stylesheet">
@@ -20,7 +21,7 @@
 	</head>
 	<body>
 	
-		Welcome to social NetWork
+		Welcome to social network
 		<!-- Le javascript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
