--- a/src/main/webapp/twitter2.html
+++ b/src/main/webapp/twitter2.html
@@ -1,48 +1,98 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
+	<head>
 
-<link rel="stylesheet" type="text/css" href="css/screen.css"
-	media="screen" />
-<title>SocialMediaFramework</title>
-</head>
-<body>
-	<div id="content">
-		<p id="top">com.pwc</p>
-
-		<ul id="menu">
-			<li><a href="facebook.html">Facebook</a></li>
-			<li><a href="google.html">Google+</a></li>
-			<li><a href="linkedin.html">LinkedIn</a></li>
-			<li class="current"><a href="twitter2.html">Twitter</a></li>
-			<li><a href="#">About</a></li>
+		<link rel="stylesheet" type="text/css" href="css/screen.css"
+		media="screen" />
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"
+		media="screen" />
+		<title>SocialMediaFramework</title>
+	</head>
+	<body>
+		<ul class="nav nav-tabs">
+			<li>
+				<a href="facebook.html">Facebook</a>
+			</li>
+			<li>
+				<a href="google.html">Google+</a>
+			</li>
+			<li>
+				<a href="linkedin.html">LinkedIn</a>
+			</li>
+			<li class="active">
+				<a href="twitter2.html">Twitter</a>
+			</li>
+			<li>
+				<a href="#">About</a>
+			</li>
 		</ul>
-	</div>
-
-	<div
-		style="margin: 50px 0 0 50px; float: left; position: absolute; width: 80%">
-		<a href="#" class="button gray" id="twitter-get-token">Get Access
-			Token</a>
-		<p class="token"
-			style="position: relative; float: left; margin-left: 30px">Token:</p>
-		<table border="1px" cellspacing="0px">
-			<tr>
-				<td id="twitter-token"></td>
-			</tr>
+		<h2 class="head-title">Socail Framework</h2>
+		<img src="images/pwc_logo.png" class="pwc-logo"/>
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th class="text-center">Function</th>
+					<th class="text-center">Demo</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>Access token</h4></strong>
+						</p>
+						<p>
+							<small>Allows a Consumer application to use an OAuth request_token to request user authorization</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="twitter-get-token">Get Access Token</a>
+						</div>
+						<div  class="col-xs-12 col-md-8" id="twitter-token">
+							scsadadasds
+						</div>
+					</div></td>
+				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>GET favorites/list</h4></strong>
+						</p>
+						<p>
+							<small>Returns the 20 most recent Tweets favorited by the authenticating or specified user.</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="twitterFav">Get Fav List</a>
+						</div>
+						<div  class="col-xs-12 col-md-8" ></div>
+					</div></td>
+				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>POST statuses/update</h4></strong>
+						</p>
+						<p>
+							<small>Updates the authenticating user's current status, also known as tweeting.</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs"  id="sharecommand">Tweeting</a>
+						</div>
+						<div  class="col-xs-12 col-md-8" ></div>
+					</div></td>
+				</tr>
+			</tbody>
 		</table>
-	</div>
-	<br />
-	<div style="margin: 100px 0 0 50px; float: left; position: absolute;width:80%">
-			<a href="#" class="button gray" id="twitterFav">Favourite List</a>
-		</div>
-		<div style="margin: 180px 0 0 70px; float: left; position: absolute;width:80%">
-			I want to say :
-			<input id="commandValue"/>
-		</div>
-		<div style="margin: 200px 0 0 50px; float: left; position: absolute;width:80%">
-			<a href="#" class="button gray" id="sharecommand">Post Status</a>
-		</div>
 		<script src="js/libs/jquery-2.1.0.js"></script>
+		<script src="js/libs/bootstrap.js"></script>
 		<script src="js/libs/json2.js"></script>
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
@@ -51,5 +101,5 @@
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
 		<script src="js/platform/twitter.js"></script>
-</body>
+	</body>
 </html>
