update user interface

--- a/src/main/webapp/linkedin.html
+++ b/src/main/webapp/linkedin.html
@@ -1,52 +1,168 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
+	<head>
 
-<link rel="stylesheet" type="text/css" href="css/screen.css"
-	media="screen" />
-<title>SocialMediaFramework</title>
-</head>
-<body>
-	<div id="content">
-		<p id="top">com.pwc</p>
-
-		<ul id="menu">
-			<li><a href="facebook.html">Facebook</a></li>
-			<li><a href="google.html">Google+</a></li>
-			<li class="current"><a href="linkedin.html">LinkedIn</a></li>
-			<li><a href="twitter2.html">Twitter</a></li>
-			<li><a href="#">About</a></li>
+		<link rel="stylesheet" type="text/css" href="css/screen.css"
+		media="screen" />
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"
+		media="screen" />
+		<title>SocialMediaFramework</title>
+	</head>
+	<body>
+		<ul class="nav nav-tabs">
+			<li>
+				<a href="facebook.html">Facebook</a>
+			</li>
+			<li>
+				<a href="google.html">Google+</a>
+			</li>
+			<li  class="active">
+				<a href="linkedin.html">LinkedIn</a>
+			</li>
+			<li>
+				<a href="twitter2.html">Twitter</a>
+			</li>
+			<li>
+				<a href="#">About</a>
+			</li>
 		</ul>
-	</div>
-
-	<div
-		style="margin: 50px 0 0 50px; float: left; position: absolute; width: 80%">
-		<a href="#" class="button gray" id="linkedin-get-token">Get Access
-			Token</a>
-		<p class="token"
-			style="position: relative; float: left; margin-left: 30px">Token:</p>
-		<table border="1px" cellspacing="0px">
-			<tr>
-				<td id="linkedin-token"></td>
-			</tr>
+		<h2 class="head-title">Socail Framework</h2>
+		<img src="images/pwc_logo.png" class="pwc-logo"/>
+				<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th class="text-center">Function</th>
+					<th class="text-center">Demo</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>Access token</h4></strong>
+						</p>
+						<p>
+							<small>Allows a Consumer application to use an OAuth request_token to request user authorization</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="linkedin-get-token">Get Access Token</a>
+						</div>
+						<div  class="col-xs-12 col-md-8" id="linkedin-token">
+							scsadadasds
+						</div>
+					</div></td>
+				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>Company Lookup API </h4></strong>
+						</p>
+						<p>
+							<small>Use the Company Profile API to find companies using a company ID, a universal name, or an email domain. You can retrieve data for individual or multiple companies. The API returns a list of companies with matching profiles. Each entry can contain the basic company information available in the company profile (such as company ID, logo, site URL, and more) and handles to additional company content (such as RSS stream or Twitter feed).</small>
+						</p>
+						<ul class="bg-success alert">
+							<li>http://api.linkedin.com/v1/companies/162479</li>
+							<li>http://api.linkedin.com/v1/companies/universal-name=linkedin</li>
+							<li>http://api.linkedin.com/v1/companies?email-domain=apple.com</li>
+						</ul>
+					</div><td >
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="linkedinComp">Company Profile</a>
+						</div>
+						<div  class="col-md-12" >
+							<table class="table">
+								<tbody class="table-striped">
+									<tr>
+										<td>Company ID</td>
+										<td id="companyid"></td>
+									</tr>
+											<tr>
+										<td>Company Name</td>
+										<td id="companyName"></td>
+									</tr>
+											<tr>
+										<td>Company Website</td>
+										<td id="companyurl"></td>
+									</tr>
+									<tr>
+										<td>Company Type</td>
+										<td id="companytype"></td>
+									</tr>
+								</tbody>
+							</table>
+							<p style="margin-left: 10px;">Company Desc</p>
+							<p id="companydesc"></p>
+						</div>
+					</div></td>
+				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>Creating Company Shares</h4></strong>
+						</p>
+						<p>
+							<small>Use the Company Share API to share updates and content to company followers on behalf of a particular company. The LinkedIn member making the call must be an admin of the company on behalf of whom content is being shared.</small>
+						</p>
+						<p class="bg-danger alert"><small>
+							For the purposes of testing, Linkedin provided a special LinkedIn Company Page that is available for all developers to use. This company page doesn't require the authenticated user making the API call to be an administrator of the company: http://www.linkedin.com/company/devtestco (Company ID 2414183)
+						</small></p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-md-10" >
+							My comment :<input id="commandValue" style="margin-left: 15px; width: 40%";>
+						</div>
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px; margin-top: 20px";>
+							<a href="#" class="btn btn-primary btn-xs"  id="sharecommand">Post Comments</a>
+						</div>
+						<div  class="col-xs-12 col-md-8" id="comment" ></div>
+					</div></td>
+				</tr>
+			</tbody>
 		</table>
-	</div>
-	<br />
-	<div style="margin: 100px 0 0 50px; float: left; position: absolute;width:80%">
-		<a href="#" class="button gray" id="linkedinComp">Company Profile</a>
-	</div>
+		
+		
+		
+		
+		<!-- <div
+		style="margin: 50px 0 0 50px; float: left; position: absolute; width: 80%">
+			<a href="#" class="button gray" id="linkedin-get-token">Get Access
+			Token</a>
+			<p class="token"
+			style="position: relative; float: left; margin-left: 30px">
+				Token:
+			</p>
+			<table border="1px" cellspacing="0px">
+				<tr>
+					<td id="linkedin-token"></td>
+				</tr>
+			</table>
+		</div>
+		<br /> -->
+		<!-- <div style="margin: 100px 0 0 50px; float: left; position: absolute;width:80%">
+			<a href="#" class="button gray" id="linkedinComp">Company Profile</a>
+		</div>
 		<div style="margin: 150px 0 0 50px; float: left; position: absolute;width:80%">
-		<a href="#" class="button gray" id="sharecommand">Post Comments on Company</a>
-	</div>
-	<div style="margin: 170px 0 0 500px; float: left; position: absolute;width:80%"> 
-		<a href="#"  id="commandLine">RESULT LINK *after opeing the link,wait 30 sec, then refresh the window</a>
-	</div>
-		<div style="margin: 200px 0 0 60px; float: left; position: absolute;width:80%"> 
-		my command : <input id="commandValue"></input>
-	</div>
-	
+			<a href="#" class="button gray" id="sharecommand">Post Comments on Company</a>
+		</div>
+		<div style="margin: 170px 0 0 500px; float: left; position: absolute;width:80%">
+			<a href="#"  id="commandLine">RESULT LINK *after opeing the link,wait 30 sec, then refresh the window</a>
+		</div>
+		<div style="margin: 200px 0 0 60px; float: left; position: absolute;width:80%">
+			my command :
+			<input id="commandValue">
+			</input>
+		</div> -->
+
 		<script src="js/libs/jquery-2.1.0.js"></script>
 		<script src="js/libs/json2.js"></script>
+		<script src="js/libs/jquery.xml2json.js"></script>
+		<script src="js/libs/bootstrap.js"></script>
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
 		<script src="js/libs/OAuthSimple.js"></script>
@@ -54,5 +170,5 @@
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
 		<script src="js/platform/linkedin.js"></script>
-</body>
+	</body>
 </html>
