--- a/src/main/webapp/twitter2.html
+++ b/src/main/webapp/twitter2.html
@@ -83,10 +83,13 @@
 						</p>
 					</div><td class="">
 					<div class="social-table-btnContainer">
-						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+						<div  class="col-md-10" >
+							Status :<input id="commandValue" style="margin-left: 15px; width: 40%";>
+						</div>
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px; margin-top: 20px";>
 							<a href="#" class="btn btn-primary btn-xs"  id="sharecommand">Tweeting</a>
 						</div>
-						<div  class="col-xs-12 col-md-8" ></div>
+						<div  class="col-xs-12 col-md-8 " id="status" ></div>
 					</div></td>
 				</tr>
 			</tbody>
