--- a/src/main/webapp/google.html
+++ b/src/main/webapp/google.html
@@ -4,120 +4,110 @@
 
 		<link rel="stylesheet" type="text/css" href="css/screen.css"
 		media="screen" />
-
-		<!-- <meta name="google-signin-clientid" content="813483280675-h879tteoivpnmfeujgf2lg1j9t2jk9n7.apps.googleusercontent.com" />
-		<meta name="google-signin-scope" content="https://www.googleapis.com/auth/plus.login" />
-		<meta name="google-signin-requestvisibleactions" content="http://schemas.google.com/AddActivity" />
-		<meta name="google-signin-cookiepolicy" content="single_host_origin" /> -->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"
+		media="screen" />
 		<title>SocialMediaFramework</title>
-		<!-- <script type="text/javascript">
-            (function() {
-                var po = document.createElement('script');
-                po.type = 'text/javascript';
-                po.async = true;
-                po.src = 'https://apis.google.com/js/client:plusone.js?onload=render';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(po, s);
-            })();
-
-            /* Executed when the APIs finish loading */
-            function render() {
-                // Additional params including the callback, the rest of the params will
-                // come from the page-level configuration.
-                var additionalParams = {
-                    'callback' : signinCallback,
-                    'clientid':'813483280675-h879tteoivpnmfeujgf2lg1j9t2jk9n7.apps.googleusercontent.com',
-                    'requestvisibleactions':'http://schemas.google.com/AddActivity',
-                    'scope':'https://www.googleapis.com/auth/plus.login',
-                    'cookiepolicy':'single_host_origin'
-                };
-               gapi.signin.render('signinButton',additionalParams);
-               var insertMoment = document.getElementById('google-insert');
-               igninButton.addEventListener('click', function() {
-               		insertMyMoment();
-               });
-
-// 
-                // // Attach a click listener to a button to trigger the flow.
-                // var signinButton = document.getElementById('signinButton');
-                // signinButton.addEventListener('click', function() {
-                    // // gapi.auth.signIn(additionalParams);
-//                    
-                    // // Will use page level configuration
-// 
-                // });
-            }
-
-            function signinCallback(authResult) {
-                if (authResult['status']['signed_in']) {
-                    // Update the app to reflect a signed in user
-                    // Hide the sign-in button now that the user is authorized, for example:
-                    document.getElementById('signinButton').setAttribute('style', 'display: none');
-                    localStorage.setItem("googleOauth",JSON.stringify(authResult));
-                } else {
-                    // Update the app to reflect a signed out user
-                    // Possible error values:
-                    //   "user_signed_out" - User is signed-out
-                    //   "access_denied" - User denied access to your app
-                    //   "immediate_failed" - Could not automatically log in the user
-                    console.log('Sign-in state: ' + authResult['error']);
-                }
-            }
-		</script> -->
-
 	</head>
-
 	<body>
-		<div id="content">
-			<p id="top">
-				com.pwc
-			</p>
-
-			<ul id="menu">
-				<li>
-					<a href="facebook.html">Facebook</a>
-				</li>
-				<li class="current">
-					<a href="google.html">Google+</a>
-				</li>
-				<li>
-					<a href="linkedin.html">LinkedIn</a>
-				</li>
-				<li>
-					<a href="twitter2.html">Twitter</a>
-				</li>
-				<li>
-					<a href="#">About</a>
-				</li>
-			</ul>
-		</div>
-
-		<div
-		style="margin: 50px 0 0 50px; float: left; position: absolute; width: 80%">
-			<!-- <a href="#" class="button gray" id="google-get-token">Get Access
-			Token</a> -->
-			<a id="signinButton" class="button gray">
-				Sign in with Google
-			</a>
-			<p class="token"
-			style="position: relative; float: left; margin-left: 30px">
-				Token:
-			</p>
-			<table border="1px" cellspacing="0px">
+		<ul class="nav nav-tabs">
+			<li >
+				<a href="facebook.html">Facebook</a>
+			</li>
+			<li class="active">
+				<a href="google.html">Google+</a>
+			</li>
+			<li>
+				<a href="linkedin.html">LinkedIn</a>
+			</li>
+			<li>
+				<a href="twitter2.html">Twitter</a>
+			</li>
+			<li>
+				<a href="#">About</a>
+			</li>
+		</ul>
+		<h2 class="head-title">Socail Framework</h2>
+		<img src="images/pwc_logo.png" class="pwc-logo"/>
+		<table class="table table-bordered">
+			<thead>
 				<tr>
-					<td id="google-token"></td>
+					<th class="text-center">Function</th>
+					<th class="text-center">Demo</th>
 				</tr>
-			</table>
-		</div>
-		<br />
-		<div style="margin: 100px 0 0 50px; float: left; position: absolute;width:80%">
-		<a href="#" class="button gray" id="google-get-me">Get me Profile
-		</a>
-		</div>
-		<div style="margin: 170px 0 0 50px; float: left; position: absolute;width:80%">
-
-		<a href="#" class="button gray" id="google-insert">insert moments</a>
-		</div>
+			</thead>
+			<tbody>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>Sign in</h4></strong>
+						</p>
+						<p>
+							<small>Allows a Consumer application to use an OAuth request_token to request user authorization</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="signinButton">Sign in with Google</a>
+						</div>
+						<div  class="col-xs-12 col-md-8" id="google-token">
+						</div>
+					</div></td>
+				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>GET Profile</h4></strong>
+						</p>
+						<p>
+							<small>Returns user's profile information.</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="google-get-me">Get Profile</a>
+						</div>
+						<div  class="col-md-12" >
+							<table class="table">
+								<tbody class="table-striped">
+									<tr>
+										<td>User ID</td>
+										<td id="user-id"></td>
+									</tr>
+											<tr>
+										<td>Name</td>
+										<td id="name"></td>
+									</tr>
+									<tr>
+										<td>Link</td>
+										<td id="link"></td>
+									</tr>
+									
+								</tbody>
+							</table>
+						</div>
+					</div></td>
+				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>POST statuses/update</h4></strong>
+						</p>
+						<p>
+							<small>Updates the authenticating user's current status.</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs"  id="google-insert">Insert Moments</a>
+						</div>
+						<div  class="col-xs-12 col-md-8 " id="status" ></div>
+					</div></td>
+				</tr>
+			</tbody>
+		</table>
 		<script src="js/libs/json2.js"></script>
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
