--- a/src/main/webapp/twitter2.html
+++ b/src/main/webapp/twitter2.html
@@ -69,7 +69,9 @@
 						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
 							<a href="#" class="btn btn-primary btn-xs" id="twitterFav">Get Fav List</a>
 						</div>
-						<div  class="col-xs-12 col-md-8" ></div>
+						<div  class="col-md-12" id="favList" >
+						
+						</div>
 					</div></td>
 				</tr>
 				<tr >
@@ -96,6 +98,7 @@
 		</table>
 		<script src="js/libs/jquery-2.1.0.js"></script>
 		<script src="js/libs/bootstrap.js"></script>
+		<script src="js/libs/handlebars.js"></script>
 		<script src="js/libs/json2.js"></script>
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
@@ -104,5 +107,36 @@
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
 		<script src="js/platform/twitter.js"></script>
+		<script id="twitter-list-template" type="text/x-handlebars-template">
+				{{#each li_related}}
+				<p>{{@index}}</p>
+					<table class="table singleFav">
+								<tbody class="table-striped">
+									<tr>
+										<td>Tweet ID</td>
+										<td class="tweetID">{{id}}</td>
+									</tr>
+											<tr>
+										<td>Tweet Content</td>
+										<td class="tweetDesc">{{text}}</td>
+									</tr>
+									<tr>
+										<td>User Name</td>
+										<td class="userName">{{userName}}</td>
+									</tr>
+									<tr>
+										<td>User ID</td>
+										<td class="userID">{{userID}}</td>
+									</tr>									
+									<tr>
+										<td>User description</td>
+										<td class="userDesc">{{userDesc}}</td>
+									</tr>
+								</tbody>
+					</table>
+				{{/each}}
+		</script>	
+		
+		
 	</body>
 </html>
