update comments on google

--- a/src/main/webapp/google.html
+++ b/src/main/webapp/google.html
@@ -96,7 +96,7 @@
 							<strong><h4>POST statuses/update</h4></strong>
 						</p>
 						<p>
-							<small>Updates the authenticating user's current status.</small>
+							<small>Moments describe activities that users engage within your app. The app activities comprise an moment type, a target, and many optional fields. The fields that are required when inserting moments depend on the type of moment. Your app can also list moments and delete moments that it previous wrote for the authenticated user.</small>
 						</p>
 					</div><td class="">
 					<div class="social-table-btnContainer">
