update google page

--- a/src/main/webapp/google.html
+++ b/src/main/webapp/google.html
@@ -93,7 +93,7 @@
 					<td>
 					<div class="social-tableCenter">
 						<p class="text-center">
-							<strong><h4>POST statuses/update</h4></strong>
+							<strong><h4>Create moments</h4></strong>
 						</p>
 						<p>
 							<small>Moments describe activities that users engage within your app. The app activities comprise an moment type, a target, and many optional fields. The fields that are required when inserting moments depend on the type of moment. Your app can also list moments and delete moments that it previous wrote for the authenticated user.</small>
