response data unification

--- a/src/main/webapp/facebook.html
+++ b/src/main/webapp/facebook.html
@@ -83,7 +83,7 @@
 										<td>Gender</td>
 										<td id="gender"></td>
 									</tr>
-											<tr>
+									<tr>
 										<td>Link</td>
 										<td id="link"></td>
 									</tr>
@@ -117,6 +117,7 @@
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
 		<script src="js/libs/jquery-2.1.0.js"></script>
+		<script src="js/libs/jquery.xml2json.js"></script>
 		<script src="js/libs/moment.min.js"></script>
 		<script src="js/libs/jso.js"></script>
 		<script src="js/commComp/config.js"></script>
