--- a/src/main/webapp/linkedin.html
+++ b/src/main/webapp/linkedin.html
@@ -55,7 +55,49 @@
 						</div>
 					</div></td>
 				</tr>
-				<tr class="">
+
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>GET Profile</h4></strong>
+						</p>
+						<p>
+							<small>Returns user's profile information.</small>
+						</p>
+					</div>
+					</td>
+					<td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px";>
+							<a href="#" class="btn btn-primary btn-xs" id="linkedin-get-profile">Get Profile</a>
+						</div>
+						<div  class="col-md-12" >
+							<table class="table">
+								<tbody class="table-striped">
+									<tr>
+										<td>User ID</td>
+										<td id="user-id"></td>
+									</tr>									
+									<tr>
+										<td>Name</td>
+										<td id="name"></td>
+									</tr>
+									<tr>
+										<td>About yourself</td>
+										<td id="user-desc"></td>
+									</tr>									
+									<tr>
+										<td>Link</td>
+										<td id="link"></td>
+									</tr>									
+								</tbody>
+							</table>
+						</div>
+					</div></td>
+				</tr>				
+				
+				<tr class="hidden">
 					<td>
 					<div class="social-tableCenter">
 						<p class="text-center">
@@ -108,7 +150,7 @@
 						</div>
 					</div></td>
 				</tr>
-				<tr class="">
+				<tr class="hidden">
 					<td>
 					<div class="social-tableCenter">
 						<p class="text-center">
