--- a/src/main/webapp/google.html
+++ b/src/main/webapp/google.html
@@ -80,6 +80,10 @@
 										<td id="name"></td>
 									</tr>
 									<tr>
+										<td>Gender</td>
+										<td id="gender"></td>
+									</tr>									
+									<tr>
 										<td>Link</td>
 										<td id="link"></td>
 									</tr>
@@ -112,6 +116,7 @@
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
 		<script src="js/libs/jquery-2.1.0.js"></script>
+		<script src="js/libs/jquery.xml2json.js"></script>
 		<script src="js/libs/moment.min.js"></script>
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
