new Changes on the SNS framework.

--- a/src/main/webapp/facebook.html
+++ b/src/main/webapp/facebook.html
@@ -122,6 +122,7 @@
 		<script src="js/libs/jso.js"></script>
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
+		<script src="js/platform/sns.js"></script>
 		<script src="js/platform/facebook.js"></script>
 	</body>
 </html>
