--- a/src/main/webapp/hytwitter.html
+++ b/src/main/webapp/hytwitter.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"
 		media="screen" />
 		<title>SocialMediaFramework</title>
-		<meta http-equiv="refresh" content="0;facebook.html">
 	</head>
 	<body class="twitter">
 			<p>Redirect to twitter</p>
@@ -17,6 +16,7 @@
 		<script src="js/libs/jso.js"></script>
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
+		<script src="js/platform/sns.js"></script>
 		<script src="js/platform/showall.js"></script>
 	</body>
 </html>
