--- a/src/main/webapp/google.html
+++ b/src/main/webapp/google.html
@@ -120,6 +120,7 @@
 		<script src="js/libs/moment.min.js"></script>
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
+		<script src="js/platform/sns.js"></script>
 		<script src="js/platform/google.js"></script>
 	</body>
 </html>
