--- a/src/main/webapp/twitter2.html
+++ b/src/main/webapp/twitter2.html
@@ -145,6 +145,7 @@
 		<script src="js/libs/jso.js"></script>
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
+		<script src="js/platform/sns.js"></script>
 		<script src="js/platform/twitter.js"></script>
 		<script id="twitter-list-template" type="text/x-handlebars-template">
 				{{#each li_related}}
