implement googke oauth_token refresh

--- a/src/main/webapp/hyGoogle.html
+++ b/src/main/webapp/hyGoogle.html
@@ -9,11 +9,19 @@
 	</head>
 	<body class="twitter">
 			<p>Redirect to twitter</p>
+			<a id="cutomer" href="#"> Refresh token</a>
+			
+			<table style="border: 1px solid black">
+				<tr>
+					<td>Older token</td>
+					<td id="older"></td>
+				</tr>
+				<tr>
+					<td>New token</td>
+					<td id="newer"></td
+				</tr>
+			</table>
 		<script src="js/libs/jquery-2.1.0.js"></script>
-		<script src="js/libs/jquery.xml2json.js"></script>
-		<script src="js/libs/bootstrap.js"></script>
-		<script src="js/libs/OAuthSimple.js"></script>
-		<script src="js/libs/jso.js"></script>
 		<script src="js/commComp/config.js"></script>
 		<script src="js/commComp/oauth.js"></script>
 		<script src="js/platform/sns.js"></script>
