--- a/src/main/webapp/hyGoogle.html
+++ b/src/main/webapp/hyGoogle.html
@@ -18,7 +18,7 @@
 				</tr>
 				<tr>
 					<td>New token</td>
-					<td id="newer"></td
+					<td id="newer"></td>
 				</tr>
 			</table>
 		<script src="js/libs/jquery-2.1.0.js"></script>
