--- a/src/main/webapp/linkedin.html
+++ b/src/main/webapp/linkedin.html
@@ -20,13 +20,13 @@
 				<a href="linkedin.html">LinkedIn</a>
 			</li>
 			<li>
-				<a href="twitter2.html">Twitter</a>
+				<a href="twitter.html">Twitter</a>
 			</li>
 			<li>
 				<a href="#">About</a>
 			</li>
 		</ul>
-		<h2 class="head-title">Socail Framework</h2>
+		<h2 class="head-title">Social Framework</h2>
 		<img src="images/pwc_logo.png" class="pwc-logo"/>
 		<table class="table table-bordered">
 			<thead>
