--- a/src/main/webapp/twitter.html
+++ b/src/main/webapp/twitter.html
@@ -51,7 +51,7 @@
 							<a href="#" class="btn btn-primary btn-xs" id="twitter-get-token">Get Access Token</a>
 						</div>
 						<div  class="col-xs-12 col-md-8" id="twitter-token">
-							scsadadasds
+							
 						</div>
 					</div></td>
 				</tr>
@@ -127,7 +127,7 @@
 							Status :<input id="commandValue" style="margin-left: 15px; width: 40%";>
 						</div>
 						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px; margin-top: 20px";>
-							<a href="#" class="btn btn-primary btn-xs"  id="sharecommand">Tweeting</a>
+							<a href="#" class="btn btn-primary btn-xs"  id="sharecommand">Tweet</a>
 						</div>
 						<div  class="col-xs-12 col-md-8 " id="status" ></div>
 					</div></td>
