signup front+service+sql

--- a/src/main/webapp/facebook.html
+++ b/src/main/webapp/facebook.html
@@ -25,6 +25,9 @@
 			<li>
 				<a href="#">About</a>
 			</li>
+			<li>
+				<a href="signup.html">SignUp</a>
+			</li>			
 		</ul>
 		<h2 class="head-title">Social Framework</h2>
 		<img src="images/pwc_logo.png" class="pwc-logo"/>
