--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -1,215 +1,149 @@
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>SocialMediaFramework</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"
-	href="css/bootstrap.css"
-	type="text/css">
-<style type="text/css">
-.input-group-addon.primary {
-	color: rgb(255, 255, 255);
-	background-color: rgb(50, 118, 177);
-	border-color: rgb(40, 94, 142);
-}
+	<head>
+		<meta charset="utf-8">
+		<title>SocialMediaFramework</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet"
+		href="css/bootstrap.css"
+		type="text/css">
+		<style type="text/css">
+			.input-group-addon.primary {
+				color: rgb(255, 255, 255);
+				background-color: rgb(50, 118, 177);
+				border-color: rgb(40, 94, 142);
+			}
 
-.input-group-addon.success {
-	color: rgb(255, 255, 255);
-	background-color: rgb(92, 184, 92);
-	border-color: rgb(76, 174, 76);
-}
+			.input-group-addon.success {
+				color: rgb(255, 255, 255);
+				background-color: rgb(92, 184, 92);
+				border-color: rgb(76, 174, 76);
+			}
 
-.input-group-addon.info {
-	color: rgb(255, 255, 255);
-	background-color: rgb(57, 179, 215);
-	border-color: rgb(38, 154, 188);
-}
+			.input-group-addon.info {
+				color: rgb(255, 255, 255);
+				background-color: rgb(57, 179, 215);
+				border-color: rgb(38, 154, 188);
+			}
 
-.input-group-addon.warning {
-	color: rgb(255, 255, 255);
-	background-color: rgb(240, 173, 78);
-	border-color: rgb(238, 162, 54);
-}
+			.input-group-addon.warning {
+				color: rgb(255, 255, 255);
+				background-color: rgb(240, 173, 78);
+				border-color: rgb(238, 162, 54);
+			}
 
-.input-group-addon.danger {
-	color: rgb(255, 255, 255);
-	background-color: rgb(217, 83, 79);
-	border-color: rgb(212, 63, 58);
-}
-</style>
-<script src="js/libs/jquery-2.1.0.js"></script>
-<script
-	src="js/libs/bootstrap.js"></script>
+			.input-group-addon.danger {
+				color: rgb(255, 255, 255);
+				background-color: rgb(217, 83, 79);
+				border-color: rgb(212, 63, 58);
+			}
+			.head-title {
+				position: absolute;
+				top: -13px;
+				right: 200px;
+				font-size: 20px;
+				color: #3276b1;
+			}
+			.pwc-logo {
+				margin-right: 10px;
+				float: right;
+				margin-top: -42px;
+				width: 34px;
+				height: 34px;
+			}
+	</style>
+		<script src="js/libs/jquery-2.1.0.js"></script>
+		<script
+		src="js/libs/bootstrap.js"></script>
+		<script src="js/commComp/config.js"></script>
 
-</head>
-<body>
-	<div class="container">
-		<div class="row">
-			<h2>Input Validation + Colorful Input Groups</h2>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-offset-4 col-sm-4">
-				<form method="post">
-					<div class="form-group">
-						<label for="validate-text">Validate Text</label>
-						<div class="input-group">
-							<input type="text" class="form-control" name="validate-text"
-								id="validate-text" placeholder="Validate Text" required="">
-							<span class="input-group-addon danger"><span
-								class="glyphicon glyphicon-remove"></span></span>
+	</head>
+	<body>
+		<div class="container" style="width: 100%;padding: 0;">
+		<ul class="nav nav-tabs">
+			<li>
+				<a href="facebook.html">Facebook</a>
+			</li>
+			<li>
+				<a href="google.html">Google+</a>
+			</li>
+			<li>
+				<a href="linkedin.html">LinkedIn</a>
+			</li>
+			<li>
+				<a href="twitter.html">Twitter</a>
+			</li>
+			<li>
+				<a href="#">About</a>
+			</li>
+			<li class="active">
+				<a href="signup.html">SignUp</a>
+			</li>
+		</ul>
+		<h2 class="head-title">Social Framework</h2>
+		<img src="images/pwc_logo.png" class="pwc-logo"/>
+			<div class="row" id="udid" style="width: 100%;text-align: center;margin-top: 50px;"></div>
+			<div class="row" id="register-form" style="margin-top: 50px;">
+				<div class="col-sm-offset-4 col-sm-4">
+					<div class="form">
+						<div class="form-group">
+							<label for="validate-text">User Name</label>
+							<div class="input-group">
+								<input type="text" class="form-control" name="validate-text"
+								id="user-name" placeholder="Validate Text" required="" value="myname">
+								<span class="input-group-addon danger"><span
+									class="glyphicon glyphicon-remove"></span></span>
+							</div>
 						</div>
-					</div>
-					<div class="form-group">
-						<label for="validate-optional">Optional</label>
-						<div class="input-group">
-							<input type="text" class="form-control" name="validate-optional"
-								id="validate-optional" placeholder="Optional"> <span
-								class="input-group-addon info"><span
-								class="glyphicon glyphicon-asterisk"></span></span>
+						<div class="form-group">
+							<label for="validate-email">Email</label>
+							<div class="input-group" data-validate="email">
+								<input type="text" class="form-control" name="validate-email"
+								id="validate-email" placeholder="Validate Email" required="" value="123@126.com">
+								<span class="input-group-addon danger"><span
+									class="glyphicon glyphicon-remove"></span></span>
+							</div>
 						</div>
-					</div>
-					<div class="form-group">
-						<label for="validate-optional">Already Validated!</label>
-						<div class="input-group">
-							<input type="text" class="form-control" name="validate-text"
-								id="validate-text" placeholder="Validate Text"
-								value="Validated!" required=""> <span
-								class="input-group-addon success"><span
-								class="glyphicon glyphicon-ok"></span></span>
+						<div class="form-group">
+							<label for="validate-phone">Mobile Phone</label>
+							<div class="input-group" data-validate="phone">
+								<input type="text" class="form-control" name="validate-phone"
+								id="validate-phone" placeholder="(814) 555-1234" required=""value="1234512321">
+								<span class="input-group-addon danger"><span
+									class="glyphicon glyphicon-remove"></span></span>
+							</div>
 						</div>
-					</div>
-					<div class="form-group">
-						<label for="validate-email">Validate Email</label>
-						<div class="input-group" data-validate="email">
-							<input type="text" class="form-control" name="validate-email"
-								id="validate-email" placeholder="Validate Email" required="">
-							<span class="input-group-addon danger"><span
-								class="glyphicon glyphicon-remove"></span></span>
+						<div class="form-group">
+							<label for="validate-length">Callback URL</label>
+							<div class="input-group" data-validate="length" data-length="5">
+								<textarea type="text" class="form-control" name="validate-length"
+								id="callbackURL" placeholder="Validate Length" required="">1234561</textarea>
+								<span class="input-group-addon danger"><span
+									class="glyphicon glyphicon-remove"></span></span>
+							</div>
 						</div>
-					</div>
-					<div class="form-group">
-						<label for="validate-phone">Validate Phone</label>
-						<div class="input-group" data-validate="phone">
-							<input type="text" class="form-control" name="validate-phone"
-								id="validate-phone" placeholder="(814) 555-1234" required="">
-							<span class="input-group-addon danger"><span
-								class="glyphicon glyphicon-remove"></span></span>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="validate-length">Minimum Length</label>
-						<div class="input-group" data-validate="length" data-length="5">
-							<textarea type="text" class="form-control" name="validate-length"
-								id="validate-length" placeholder="Validate Length" required=""></textarea>
-							<span class="input-group-addon danger"><span
-								class="glyphicon glyphicon-remove"></span></span>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="validate-select">Validate Select</label>
-						<div class="input-group">
-							<select class="form-control" name="validate-select"
+						<div class="form-group">
+							<label for="validate-select">Client type</label>
+							<div class="input-group">
+								<select class="form-control" name="validate-select"
 								id="validate-select" placeholder="Validate Select" required="">
-								<option value="">Select an item</option>
-								<option value="item_1">Item 1</option>
-								<option value="item_2">Item 2</option>
-								<option value="item_3">Item 3</option>
-							</select> <span class="input-group-addon danger"><span
-								class="glyphicon glyphicon-remove"></span></span>
+									<option value="" >Select an item</option>
+									<option value="1" selected="selected">ios</option>
+									<option value="2">web app</option>
+									<option value="3">Andriod</option>
+								</select>
+								<span class="input-group-addon danger"><span
+									class="glyphicon glyphicon-remove"></span></span>
+							</div>
 						</div>
+						<button class="btn btn-primary col-xs-12" id="uploadbtn" disabled="">
+							Submit
+						</button>
 					</div>
-					<div class="form-group">
-						<label for="validate-number">Validate Number</label>
-						<div class="input-group" data-validate="number">
-							<input type="text" class="form-control" name="validate-number"
-								id="validate-number" placeholder="Validate Number" required="">
-							<span class="input-group-addon danger"><span
-								class="glyphicon glyphicon-remove"></span></span>
-						</div>
-					</div>
-					<button type="submit" class="btn btn-primary col-xs-12" disabled="">Submit</button>
-				</form>
+				</div>
 			</div>
 		</div>
-	</div>
-	<script type="text/javascript">
-		$(document)
-				.ready(
-						function() {
-							$(
-									'.input-group input[required], .input-group textarea[required], .input-group select[required]')
-									.on(
-											'keyup change',
-											function() {
-												var $form = $(this).closest(
-														'form'), $group = $(
-														this).closest(
-														'.input-group'), $addon = $group
-														.find('.input-group-addon'), $icon = $addon
-														.find('span'), state = false;
+		<script type="text/javascript" src="js/platform/signup.js"></script>
+	
 
-												if (!$group.data('validate')) {
-													state = $(this).val() ? true
-															: false;
-												} else if ($group
-														.data('validate') == "email") {
-													state = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/
-															.test($(this).val())
-												} else if ($group
-														.data('validate') == 'phone') {
-													state = /^[(]{0,1}[0-9]{3}[)]{0,1}[-\s\.]{0,1}[0-9]{3}[-\s\.]{0,1}[0-9]{4}$/
-															.test($(this).val())
-												} else if ($group
-														.data('validate') == "length") {
-													state = $(this).val().length >= $group
-															.data('length') ? true
-															: false;
-												} else if ($group
-														.data('validate') == "number") {
-													state = !isNaN(parseFloat($(
-															this).val()))
-															&& isFinite($(this)
-																	.val());
-												}
-
-												if (state) {
-													$addon
-															.removeClass('danger');
-													$addon.addClass('success');
-													$icon
-															.attr('class',
-																	'glyphicon glyphicon-ok');
-												} else {
-													$addon
-															.removeClass('success');
-													$addon.addClass('danger');
-													$icon
-															.attr('class',
-																	'glyphicon glyphicon-remove');
-												}
-
-												if ($form
-														.find('.input-group-addon.danger').length == 0) {
-													$form.find(
-															'[type="submit"]')
-															.prop('disabled',
-																	false);
-												} else {
-													$form.find(
-															'[type="submit"]')
-															.prop('disabled',
-																	true);
-												}
-											});
-
-							$(
-									'.input-group input[required], .input-group textarea[required], .input-group select[required]')
-									.trigger('change');
-
-						});
-	</script>
-
-
-</body>
+	</body>
 </html>
