remove useless code

--- a/src/main/webapp/facebook.html
+++ b/src/main/webapp/facebook.html
@@ -14,7 +14,7 @@
 				<a href="facebook.html">Facebook</a>
 			</li>
 			<li>
-				<a href="#" id="googleURL">Google+</a>
+				<a href="google.html">Google+</a>
 			</li>
 			<li>
 				<a href="linkedin.html">LinkedIn</a>
