update twitter access token, accesstokensec, add loading,js

--- a/src/main/webapp/twitter.html
+++ b/src/main/webapp/twitter.html
@@ -145,6 +145,7 @@
 		<script src="js/libs/localstorage.js"></script>
 		<script src="js/libs/modernizr-2.5.3.min.js"></script>
 		<script src="js/commComp/config.js"></script>
+		<script src="js/commComp/loading.js"></script>
 		<script src="js/platform/sns.js"></script>
 		<script src="js/platform/twitter.js"></script>
 		<script id="twitter-list-template" type="text/x-handlebars-template">
