--- a/src/main/webapp/facebook.html
+++ b/src/main/webapp/facebook.html
@@ -122,6 +122,7 @@
 		<script src="js/libs/jquery-2.1.0.js"></script>
 		<script src="js/libs/jquery.xml2json.js"></script>
 		<script src="js/libs/moment.min.js"></script>
+		<script src="js/commComp/loading.js"></script>		
 		<script src="js/commComp/config.js"></script>
 		<script src="js/platform/sns.js"></script>
 		<script src="js/platform/facebook.js"></script>
